# cmor-check

./: README.md  pyproject.toml  with_pytest.sh
.github/workflows/: ci.yaml
ci/requirements/: environment.yml
cmor_check/: __init__.py  cc_plugin.py  checks.py  cli.py  cmor_check.py  datasets.py  log.py  tables.py  utils.py
cmor_check/tests/: conftest.py  test_check_cmor.py  test_cmor.py
